<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/blood_drop"

        />
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/blood"
           android:textColor="@color/red"
           android:textSize="20sp"
           android:textStyle="bold"
           android:padding="8dp"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/donation"
           android:textColor="@color/black"
           android:textSize="20sp"
           android:textStyle="bold"
           android:padding="8dp"
           />
   </LinearLayout>

    <Button
        android:id="@+id/startBtn_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/start"

        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        />

</LinearLayout>